--- a/exaudfclient/base/javacontainer/BUILD
+++ b/exaudfclient/base/javacontainer/BUILD
@@ -9,32 +9,32 @@ genrule(
         cd build_exascript_java_tmp_cc
         swig -v -O -DEXTERNAL_PROCESS -Wall -c++ -java -addextern -module exascript_java -package com.exasol.swig -outdir "../java_src/com/exasol/swig" -o "../exascript_java_tmp.cc" exaudflib/exascript.i
         cd ..
-        cp java_src/com/exasol/swig/ConnectionInformationWrapper.java $(location orig/com/exasol/swig/ConnectionInformationWrapper.java)
-        cp java_src/com/exasol/swig/exascript_java.java $(location orig/com/exasol/swig/exascript_java.java)
-        cp java_src/com/exasol/swig/exascript_javaJNI.java $(location orig/com/exasol/swig/exascript_javaJNI.java)
-        cp java_src/com/exasol/swig/ExportSpecificationWrapper.java $(location orig/com/exasol/swig/ExportSpecificationWrapper.java)
-        cp java_src/com/exasol/swig/ImportSpecificationWrapper.java $(location orig/com/exasol/swig/ImportSpecificationWrapper.java)
-        cp java_src/com/exasol/swig/Metadata.java $(location orig/com/exasol/swig/Metadata.java)
-        cp java_src/com/exasol/swig/ResultHandler.java $(location orig/com/exasol/swig/ResultHandler.java)
-        cp java_src/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ExportSpecification.java $(location orig/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ExportSpecification.java)
-        cp java_src/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ImportSpecification.java $(location orig/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ImportSpecification.java)
-        cp java_src/com/exasol/swig/SWIGVM_datatype_e.java $(location orig/com/exasol/swig/SWIGVM_datatype_e.java)
-        cp java_src/com/exasol/swig/SWIGVM_itertype_e.java $(location orig/com/exasol/swig/SWIGVM_itertype_e.java)
-        cp java_src/com/exasol/swig/TableIterator.java $(location orig/com/exasol/swig/TableIterator.java)
+        cp java_src/com/exasol/swig/ConnectionInformationWrapper.java $(location ConnectionInformationWrapper.java)
+        cp java_src/com/exasol/swig/exascript_java.java $(location exascript_java.java)
+        cp java_src/com/exasol/swig/exascript_javaJNI.java $(location raw/exascript_javaJNI.java)
+        cp java_src/com/exasol/swig/ExportSpecificationWrapper.java $(location ExportSpecificationWrapper.java)
+        cp java_src/com/exasol/swig/ImportSpecificationWrapper.java $(location ImportSpecificationWrapper.java)
+        cp java_src/com/exasol/swig/Metadata.java $(location Metadata.java)
+        cp java_src/com/exasol/swig/ResultHandler.java $(location raw/ResultHandler.java)
+        cp java_src/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ExportSpecification.java $(location SWIGTYPE_p_ExecutionGraph__ExportSpecification.java)
+        cp java_src/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ImportSpecification.java $(location SWIGTYPE_p_ExecutionGraph__ImportSpecification.java)
+        cp java_src/com/exasol/swig/SWIGVM_datatype_e.java $(location SWIGVM_datatype_e.java)
+        cp java_src/com/exasol/swig/SWIGVM_itertype_e.java $(location SWIGVM_itertype_e.java)
+        cp java_src/com/exasol/swig/TableIterator.java $(location raw/TableIterator.java)
         cp exascript_java_tmp.cc $(location exascript_java_tmp.cc)
     """,
-    outs = ["orig/com/exasol/swig/ConnectionInformationWrapper.java",
-            "orig/com/exasol/swig/exascript_java.java",
-            "orig/com/exasol/swig/exascript_javaJNI.java",
-            "orig/com/exasol/swig/ExportSpecificationWrapper.java",
-            "orig/com/exasol/swig/ImportSpecificationWrapper.java",
-            "orig/com/exasol/swig/Metadata.java",
-            "orig/com/exasol/swig/ResultHandler.java",
-            "orig/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ExportSpecification.java",
-            "orig/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ImportSpecification.java",
-            "orig/com/exasol/swig/SWIGVM_datatype_e.java",
-            "orig/com/exasol/swig/SWIGVM_itertype_e.java",
-            "orig/com/exasol/swig/TableIterator.java",
+    outs = ["ConnectionInformationWrapper.java",
+            "exascript_java.java",
+            "ExportSpecificationWrapper.java",
+            "ImportSpecificationWrapper.java",
+            "Metadata.java",
+            "SWIGTYPE_p_ExecutionGraph__ExportSpecification.java",
+            "SWIGTYPE_p_ExecutionGraph__ImportSpecification.java",
+            "SWIGVM_datatype_e.java",
+            "SWIGVM_itertype_e.java",
+            "raw/exascript_javaJNI.java",
+            "raw/ResultHandler.java",
+            "raw/TableIterator.java",
             "exascript_java_tmp.cc"
     ],
     srcs = ["//base/exaudflib:exascript.i","//base/exaudflib:swig/script_data_transfer_objects_wrapper.h"]
@@ -67,75 +67,28 @@ genrule(
     cmd = """
             TMPDIR=`mktemp -d`
             mkdir -p "$$TMPDIR"/java_src/com/exasol/swig
-            cp  $(location :orig/com/exasol/swig/TableIterator.java) "$$TMPDIR"/java_src/com/exasol/swig/
-            cp  $(location :orig/com/exasol/swig/ResultHandler.java) "$$TMPDIR"/java_src/com/exasol/swig/
-            cp  $(location :orig/com/exasol/swig/exascript_javaJNI.java) "$$TMPDIR"/java_src/com/exasol/swig/
+            cp  $(location :raw/TableIterator.java) "$$TMPDIR"/java_src/com/exasol/swig/
+            cp  $(location :raw/ResultHandler.java) "$$TMPDIR"/java_src/com/exasol/swig/
+            cp  $(location :raw/exascript_javaJNI.java) "$$TMPDIR"/java_src/com/exasol/swig/
             find "$$TMPDIR"/java_src/com/exasol/swig/ -name *.java -type f -exec chmod 644 {} \\;
             cp -r -L $(location //base:filter_swig_code.py) $(location :exascript_java_tmp.cc) "$$TMPDIR"
             (cd "$$TMPDIR"
             python3 filter_swig_code.py "exascript_java.cc" "exascript_java_tmp.cc")
             cp "$$TMPDIR"/exascript_java.cc $(location :exascript_java.cc)
-            cp "$$TMPDIR"/java_src/com/exasol/swig/TableIterator.java $(location :filtered/com/exasol/swig/TableIterator.java)
-            cp "$$TMPDIR"/java_src/com/exasol/swig/ResultHandler.java $(location :filtered/com/exasol/swig/ResultHandler.java)
-            cp "$$TMPDIR"/java_src/com/exasol/swig/exascript_javaJNI.java $(location :filtered/com/exasol/swig/exascript_javaJNI.java)
+            cp "$$TMPDIR"/java_src/com/exasol/swig/TableIterator.java $(location TableIterator.java)
+            cp "$$TMPDIR"/java_src/com/exasol/swig/ResultHandler.java $(location ResultHandler.java)
+            cp "$$TMPDIR"/java_src/com/exasol/swig/exascript_javaJNI.java $(location exascript_javaJNI.java)
             rm -rf "$$TMPDIR"
             """,
     outs = [
             "exascript_java.cc",
-            "filtered/com/exasol/swig/TableIterator.java",
-            "filtered/com/exasol/swig/ResultHandler.java",
-            "filtered/com/exasol/swig/exascript_javaJNI.java"
-            ],
-    srcs = [":exascript_java_tmp.cc", ":orig/com/exasol/swig/TableIterator.java",
-            ":orig/com/exasol/swig/ResultHandler.java", ":orig/com/exasol/swig/exascript_javaJNI.java"],
-    tools = ["//base:filter_swig_code.py"]
-)
-
-
-genrule(
-    name = "finish_java_package",
-    cmd = """
-            cp $(location filtered/com/exasol/swig/TableIterator.java) $(location TableIterator.java)
-            cp $(location filtered/com/exasol/swig/ResultHandler.java) $(location ResultHandler.java)
-            cp $(location filtered/com/exasol/swig/exascript_javaJNI.java) $(location exascript_javaJNI.java)
-            cp $(location orig/com/exasol/swig/ConnectionInformationWrapper.java) $(location ConnectionInformationWrapper.java)
-            cp $(location orig/com/exasol/swig/exascript_java.java) $(location exascript_java.java)
-            cp $(location orig/com/exasol/swig/ExportSpecificationWrapper.java) $(location ExportSpecificationWrapper.java)
-            cp $(location orig/com/exasol/swig/ImportSpecificationWrapper.java) $(location ImportSpecificationWrapper.java)
-            cp $(location orig/com/exasol/swig/Metadata.java) $(location Metadata.java)
-            cp $(location orig/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ExportSpecification.java) $(location SWIGTYPE_p_ExecutionGraph__ExportSpecification.java)
-            cp $(location orig/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ImportSpecification.java) $(location SWIGTYPE_p_ExecutionGraph__ImportSpecification.java)
-            cp $(location orig/com/exasol/swig/SWIGVM_datatype_e.java) $(location SWIGVM_datatype_e.java)
-            cp $(location orig/com/exasol/swig/SWIGVM_itertype_e.java) $(location SWIGVM_itertype_e.java)
-          """,
-    outs = [
-            "ConnectionInformationWrapper.java",
-            "exascript_java.java",
-            "exascript_javaJNI.java",
-            "ExportSpecificationWrapper.java",
-            "ImportSpecificationWrapper.java",
-            "Metadata.java",
-            "ResultHandler.java",
-            "SWIGTYPE_p_ExecutionGraph__ExportSpecification.java",
-            "SWIGTYPE_p_ExecutionGraph__ImportSpecification.java",
-            "SWIGVM_datatype_e.java",
-            "SWIGVM_itertype_e.java",
             "TableIterator.java",
+            "ResultHandler.java",
+            "exascript_javaJNI.java"
             ],
-    srcs = [
-            "filtered/com/exasol/swig/TableIterator.java",
-            "filtered/com/exasol/swig/ResultHandler.java",
-            "filtered/com/exasol/swig/exascript_javaJNI.java",
-            "orig/com/exasol/swig/ConnectionInformationWrapper.java",
-            "orig/com/exasol/swig/exascript_java.java",
-            "orig/com/exasol/swig/ExportSpecificationWrapper.java",
-            "orig/com/exasol/swig/ImportSpecificationWrapper.java",
-            "orig/com/exasol/swig/Metadata.java",
-            "orig/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ExportSpecification.java",
-            "orig/com/exasol/swig/SWIGTYPE_p_ExecutionGraph__ImportSpecification.java",
-            "orig/com/exasol/swig/SWIGVM_datatype_e.java",
-            "orig/com/exasol/swig/SWIGVM_itertype_e.java",
-            ]
+    srcs = [":exascript_java_tmp.cc", ":raw/TableIterator.java",
+            ":raw/ResultHandler.java", ":raw/exascript_javaJNI.java"],
+    tools = ["//base:filter_swig_code.py"]
 )
 
 cc_library(
