--- a/exaudfclient/base/exaudflib/test/BUILD
+++ b/exaudfclient/base/exaudflib/test/BUILD
@@ -2,8 +2,8 @@ cc_test(
     name = "exaudflib-test",
     srcs = ["script_data_transfer_objects_test.cpp", "script_option_lines_test.cpp"],
     deps = [
-        "//exaudflib:script_data_transfer_objects",
-        "//exaudflib:scriptoptionlines",
+        "//base/exaudflib:script_data_transfer_objects",
+        "//base/exaudflib:scriptoptionlines",
         "@googletest//:gtest_main",
     ],
 )
