--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -27,12 +27,12 @@ jobs:
         sudo apt-get install -y openjdk-11-jdk libzmq3-dev
     - name: Java Tests
       run: |
-        export USE_BAZEL_VERSION=6.4.0
-        bazel test //javacontainer/test/...
-      working-directory: ./exaudfclient/base
+        export USE_BAZEL_VERSION=7.2.1
+        bazel test //base/javacontainer/test/...
+      working-directory: ./exaudfclient/
     - name: ExaudfLib Tests
       run: |
-        export USE_BAZEL_VERSION=6.4.0
-        bazel test //exaudflib/test/...
-      working-directory: ./exaudfclient/base
+        export USE_BAZEL_VERSION=7.2.1
+        bazel test //base/exaudflib/test/...
+      working-directory: ./exaudfclient/
 
