--- a/exaudfclient/base/streaming_container/BUILD
+++ b/exaudfclient/base/streaming_container/BUILD
@@ -4,5 +4,5 @@ cc_library(
     name = "streamingcontainer",
     srcs = ["streamingcontainer.cc","streamingcontainer.h"],
     hdrs = ["streamingcontainer.h"],
-    deps = ["//exaudflib:exaudflib-deps","//exaudflib:header"]
+    deps = ["//base/exaudflib:exaudflib-deps","//base/exaudflib:header"]
 )
