#652: Refactored Java script-options-parsing

--- a/exaudfclient/base/benchmark_container/BUILD
+++ b/exaudfclient/base/benchmark_container/BUILD
@@ -4,5 +4,5 @@ cc_library(
     name = "benchmark_container",
     srcs = ["benchmark_container.cc","benchmark_container.h"],
     hdrs = ["benchmark_container.h"],
-    deps = ["//base/exaudflib:exaudflib-deps","//base/exaudflib:header", "//base:debug_message_h"]+["//base/exaudflib:scriptoptionlines"]
+    deps = ["//base/exaudflib:exaudflib-deps","//base/exaudflib:header", "//base:debug_message_h"]+["//base/script_options:scriptoptionlines"]
 )
