--- a/exaudfclient/base/exaudflib/test/BUILD
+++ b/exaudfclient/base/exaudflib/test/BUILD
@@ -1,9 +1,8 @@
 cc_test(
     name = "exaudflib-test",
-    srcs = ["script_data_transfer_objects_test.cpp", "script_option_lines_test.cpp"],
+    srcs = ["script_data_transfer_objects_test.cpp"],
     deps = [
         "//base/exaudflib:script_data_transfer_objects",
-        "//base/exaudflib:scriptoptionlines",
         "@googletest//:gtest_main",
     ],
 )
