--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -35,4 +35,9 @@ jobs:
         export USE_BAZEL_VERSION=7.2.1
         bazel test //base/exaudflib/test/...
       working-directory: ./exaudfclient/
+    - name: Script Options Parser Tests
+      run: |
+        export USE_BAZEL_VERSION=7.2.1
+        bazel test //base/script_options_parser/test/...
+      working-directory: ./exaudfclient/
 
