Fixes from review

--- a/exaudfclient/base/javacontainer/script_options/BUILD
+++ b/exaudfclient/base/javacontainer/script_options/BUILD
@@ -3,7 +3,7 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "java_scriptoptionlines",
-    hdrs = [":scriptoptionlinesconverter.h"],
-    srcs = [":scriptoptionlinesparser.h", ":scriptoptionlinesconverter.h", ":scriptoptionlinesconverter.cc", ":scriptoptionlinesparserlegacy.h", ":scriptoptionlinesparserlegacy.cc"],
+    hdrs = [":converter.h"],
+    srcs = [":arser.h", ":converter.h", ":converter.cc", ":parserlegacy.h", ":parserlegacy.cc"],
     deps = ["//base/script_options_parser:scriptoptionlinesparser", "//base/exaudflib:header", "//base/exaudflib:exaudflib-deps"],
 )
