Fixes from review

--- a/exaudfclient/base/javacontainer/script_options/BUILD
+++ b/exaudfclient/base/javacontainer/script_options/BUILD
@@ -4,6 +4,6 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
     name = "java_scriptoptionlines",
     hdrs = [":converter.h"],
-    srcs = [":arser.h", ":converter.h", ":converter.cc", ":parserlegacy.h", ":parserlegacy.cc"],
+    srcs = [":parser.h", ":converter.h", ":converter.cc", ":parser_legacy.h", ":parser_legacy.cc"],
     deps = ["//base/script_options_parser:scriptoptionlinesparser", "//base/exaudflib:header", "//base/exaudflib:exaudflib-deps"],
 )
