--- a/exaudfclient/base/exaudflib/BUILD
+++ b/exaudfclient/base/exaudflib/BUILD
@@ -4,15 +4,6 @@ exports_files(["exascript.i"])
 load("//:variables.bzl", "VM_ENABLED_DEFINES")
 
 cc_library(
-    name = "scriptoptionlines",
-    hdrs = ["vm/scriptoptionlines.h"],
-    srcs = ["vm/scriptoptionlines.cc","vm/scriptoptionlines.h"],
-    copts= ["-fno-lto"],
-    # We deactivate link time optimization, because otherwise we get the following linker/compiler error while linking/compiling exaudfclient
-    # function ExecutionGraph::extractOptionLine(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, unsigned long&, std::function<void (char const*)>): error: undefined reference to 'std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > std::operator+<char, std::char_traits<char>, std::allocator<char> >(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, char const*)'
-)
-
-cc_library(
     name = "script_data_transfer_objects",
     srcs = ["swig/script_data_transfer_objects.cc","swig/script_data_transfer_objects.h"],
     hdrs = ["swig/script_data_transfer_objects.h"],
@@ -82,7 +73,7 @@ cc_library(
 # The only target which must depend on it is //:libexaudflib-complete.so.
 # If you depend on this target you will load protobuf into your linker namespace
 # which might cause problems with tensorflow. If you need
-# "//base/exaudflib:scriptoptionlines","//base/exaudflib:script_data_transfer_objects" or
+# "//base/exaudflib:script_data_transfer_objects" or
 # "//base/exaudflib:script_data_transfer_objects_wrapper" in the language container
 # depend directly on them or depend on exaudflib-deps
 cc_library(
