--- a/exaudfclient/base/script_options_parser/test/BUILD
+++ b/exaudfclient/base/script_options_parser/test/BUILD
@@ -2,7 +2,7 @@ cc_test(
     name = "script-options-parser-test",
     srcs = ["script_option_lines_test.cpp"],
     deps = [
-        "//base/script_options_parser:scriptoptionlinesparser",
+        "//base/script_options_parser:script_option_lines_parser",
         "@googletest//:gtest_main",
     ],
 )
