Inject swig factory

--- a/exaudfclient/BUILD
+++ b/exaudfclient/BUILD
@@ -78,7 +78,7 @@ cc_binary(
     srcs = ["exaudfclient.cc", "//base:load_dynamic"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//base/exaudflib:header", "//base:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
-           ["//base/exaudflib:exaudflib-deps"],
+           ["//base/exaudflib:exaudflib-deps", "//base/swig_factory:swig_factory"],
     defines = VM_ENABLED_DEFINES,
     data = ["//base:libexaudflib_complete.so"]
 )
