--- a/exaudfclient/base/javacontainer/script_options/BUILD
+++ b/exaudfclient/base/javacontainer/script_options/BUILD
@@ -4,6 +4,7 @@ package(default_visibility = ["//visibility:public"])
 cc_library(
     name = "java_script_option_lines",
     hdrs = [":extractor.h", ":parser_factory.h"],
-    srcs = [":parser.h", ":converter.h", ":converter.cc", ":parser_legacy.h", ":parser_legacy.cc", ":extractor.cc", ":parser_factory.cc"],
+    srcs = [":parser.h", ":converter.h", ":converter.cc", ":parser_legacy.h", ":parser_legacy.cc", ":extractor.cc",
+            ":parser_factory.cc", ":keywords.h", ":checksum.h", ":checksum.cc"],
     deps = ["//base/script_options_parser:script_option_lines_parser", "//base/exaudflib:header", "//base/exaudflib:exaudflib-deps"],
 )
