--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -12,8 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      USE_BAZEL_VERSION=7.2.1
-
+      USE_BAZEL_VERSION: 7.2.1
     steps:
     - uses: actions/checkout@v4
 
