--- a/exaudfclient/base/javacontainer/test/BUILD
+++ b/exaudfclient/base/javacontainer/test/BUILD
@@ -13,10 +13,11 @@ java_test(
 
 cc_test(
     name = "javacontainer-test",
-    srcs = ["cpp/javacontainer_test.cc", "cpp/exaudf_wrapper.cc", "cpp/javavm_test.cc", "cpp/javavm_test.h"],
+    srcs = ["cpp/javacontainer_test.cc", "cpp/exaudf_wrapper.cc", "cpp/javavm_test.cc", "cpp/javavm_test.h",
+            "cpp/swig_factory_test.h", "cpp/swig_factory_test.cc"],
     deps = [
         "//base/javacontainer:javacontainer",
         "@googletest//:gtest_main",
     ],
-    data = ["test.jar"]
+    data = ["test.jar", "other_test.jar"]
 )
