--- a/flavors/template-Exasol-all-python-3.10-cuda-conda/flavor_base/build_run/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10-cuda-conda/flavor_base/build_run/Dockerfile
@@ -7,11 +7,11 @@ WORKDIR /exaudfclient/
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$MAMBA_ROOT_PREFIX/lib/
 ENV CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH:$MAMBA_ROOT_PREFIX/include/
 ENV C_INCLUDE_PATH=$C_INCLUDE_PATH:$MAMBA_ROOT_PREFIX/include/
-RUN ./build.sh --config no-tty --config optimize --config python --config fast-binary-py3
+RUN ./build.sh --config no-tty --config optimize --config python --config fast-binary
 RUN cp -r -L bazel-bin/* /exaudf
 
 WORKDIR /exaudfclient/base
-RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
+RUN ./test_udfclient.sh /exaudf/exaudfclient
 
 WORKDIR /exaudf
 
