--- a/flavors/template-Exasol-all-python-3.10/flavor_base/build_run/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10/flavor_base/build_run/Dockerfile
@@ -25,11 +25,11 @@ RUN mkdir /exaudfclient /exaudf
 COPY exaudfclient/ /exaudfclient/
 
 WORKDIR /exaudfclient/
-RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config fast-binary-py3"]
+RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty --config optimize --config python --config fast-binary"]
 RUN cp -r -L bazel-bin/* /exaudf
 
 WORKDIR /exaudfclient/base
-RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
+RUN ./test_udfclient.sh /exaudf/exaudfclient
 
 WORKDIR /exaudf
 
