--- a/exaudfclient/base/script_options_parser/legacy/BUILD
+++ b/exaudfclient/base/script_options_parser/legacy/BUILD
@@ -4,5 +4,6 @@ cc_library(
     name = "script_option_lines_parser_legacy",
     hdrs = ["script_option_lines.h"],
     srcs = ["script_option_lines.cc"],
+    deps = ["//base/script_options_parser:exception"],
     copts= ["-fno-lto"],
 )
