Added CTPG specific tests

--- a/exaudfclient/base/javacontainer/test/BUILD
+++ b/exaudfclient/base/javacontainer/test/BUILD
@@ -25,7 +25,7 @@ cc_test(
 
 cc_test(
     name = "javacontainer-test-ctpg-parser",
-    srcs = JAVACONTAINER_TEST_SRCS,
+    srcs = JAVACONTAINER_TEST_SRCS + ["cpp/javacontainer_ctpg_test.cc"],
     deps = [
         "//base/javacontainer:javacontainer",
         "@googletest//:gtest_main",
