--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+     fail-fast: false
      matrix:
         test:
           - "//base/javacontainer/test:ExaStackTraceCleanerTest"
@@ -57,7 +58,7 @@ jobs:
     - name: Install JDK and ZMQ
       run: |
         sudo apt-get update
-        sudo apt-get install -y openjdk-11-jdk libzmq3-dev
+        sudo apt-get install -y openjdk-11-jdk libzmq3-dev valgrind
     - name: Run tests
       run: |
         bazel test ${{ matrix.additional_args }} ${{ matrix.test }}
