--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -12,34 +12,37 @@ jobs:
     strategy:
      fail-fast: false
      matrix:
-        test:
-          - "//base/javacontainer/test:ExaStackTraceCleanerTest"
-          - "//base/javacontainer/test:javacontainer-test-legacy-parser"
-          - "//base/javacontainer/test:javacontainer-test-ctpg-parser"
-          - "//base/javacontainer/script_options/..."
-          - "//base/exaudflib/test/..."
-          - "//base/script_options_parser/ctpg/..."
-          - "//base/script_options_parser/legacy/..."
-        additional_args: [""]
         include:
+          - test: "//base/javacontainer/test:ExaStackTraceCleanerTest"
+            name: "ExaStackTraceCleanerTest"
           - test: "//base/javacontainer/test:javacontainer-test-legacy-parser"
-            additional_args: "--run_under='valgrind'"
-          - test: "//base/javacontainer/test:javacontainer-test-legacy-parser"
-            additional_args: "--run_under='valgrind'"
+            name: "javacontainer-test-legacy-parser"
           - test: "//base/javacontainer/test:javacontainer-test-ctpg-parser"
-            additional_args: "--run_under='valgrind'"
+            name: "javacontainer-test-ctpg-parser"
+          - test: "//base/javacontainer/script_options/..."
+            name: "javacontainer-script_options"
+          - test: "//base/exaudflib/test/..."
+            name: "exaudflib"
           - test: "//base/script_options_parser/ctpg/..."
-            additional_args: "--run_under='valgrind' --test_timeout=3600"
+            name: "script_options_parser_ctpg"
           - test: "//base/script_options_parser/legacy/..."
-            additional_args: "--run_under='valgrind'"
-          - test: "//base/javacontainer/test:javacontainer-test-legacy-parser"
-            additional_args: "--config asan"
-          - test: "//base/javacontainer/test:javacontainer-test-ctpg-parser"
-            additional_args: "--config asan"
-          - test: "//base/script_options_parser/ctpg/..."
-            additional_args: "--config asan"
-          - test: "//base/script_options_parser/legacy/..."
-            additional_args: "--config asan"
+            name: "script_options_parser_legacy"
+          - test: "--run_under='valgrind' //base/javacontainer/test:javacontainer-test-legacy-parser"
+            name: "javacontainer-test-legacy-parser-with-valgrind"
+          - test: "--run_under='valgrind' //base/javacontainer/test:javacontainer-test-ctpg-parser"
+            name: "javacontainer-test-ctpg-parser-with-valgrind"
+          - test: "--run_under='valgrind' --test_timeout=3600 //base/script_options_parser/ctpg/..."
+            name: "script_options_parser_ctpg_with_valgrind"
+          - test: "--run_under='valgrind' //base/script_options_parser/legacy/..."
+            name: "script_options_parser_legacy_with_valgrind"
+          - test: "--config=asan //base/javacontainer/test:javacontainer-test-legacy-parser"
+            name: "javacontainer-test-legacy-parser-with-asan"
+          - test: "--config=asan //base/javacontainer/test:javacontainer-test-ctpg-parser"
+            name: "javacontainer-test-ctpg-parser-with-asan"
+          - test: "--config=asan --test_timeout=3600 //base/script_options_parser/ctpg/..."
+            name: "script_options_parser_ctpg_with_asan"
+          - test: "--config=asan //base/script_options_parser/legacy/..."
+            name: "script_options_parser_legacy_with_asan"
 
 
     env:
@@ -64,5 +67,5 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: "test_logs_${{ matrix.test }}_${{ matrix.additional_args }}"
+        name: "${{ matrix.name }}"
         path: /home/runner/.cache/bazel/_bazel_runner/**/test.log
