Fixed GH Workflow

--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -66,6 +66,7 @@ jobs:
       working-directory: ./exaudfclient/
 
     - uses: actions/upload-artifact@v4
+      if: always()
       with:
         name: "${{ matrix.name }}"
-        path: /home/runner/.cache/bazel/_bazel_runner/*/execroot/_main/bazel-out/k8-dbg/testlogs/base/**/test.log
+        path: /home/runner/.cache/bazel/_bazel_runner/*/execroot/_main/bazel-out/k8-dbg/testlogs/**/test.log
