--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -27,13 +27,13 @@ jobs:
             name: "script_options_parser_ctpg"
           - test: "//base/script_options_parser/legacy/..."
             name: "script_options_parser_legacy"
-          - test: "--run_under='valgrind' //base/javacontainer/test:javacontainer-test-legacy-parser"
+          - test: "--run_under='valgrind' --copt -DVALGRIND_ACTIVE //base/javacontainer/test:javacontainer-test-legacy-parser"
             name: "javacontainer-test-legacy-parser-with-valgrind"
-          - test: "--run_under='valgrind' //base/javacontainer/test:javacontainer-test-ctpg-parser"
+          - test: "--run_under='valgrind' --copt -DVALGRIND_ACTIVE //base/javacontainer/test:javacontainer-test-ctpg-parser"
             name: "javacontainer-test-ctpg-parser-with-valgrind"
-          - test: "--run_under='valgrind' --test_timeout=3600 //base/script_options_parser/ctpg/..."
+          - test: "--run_under='valgrind' --copt -DVALGRIND_ACTIVE //base/script_options_parser/ctpg/..."
             name: "script_options_parser_ctpg_with_valgrind"
-          - test: "--run_under='valgrind' //base/script_options_parser/legacy/..."
+          - test: "--run_under='valgrind' --copt -DVALGRIND_ACTIVE //base/script_options_parser/legacy/..."
             name: "script_options_parser_legacy_with_valgrind"
           - test: "--config=asan //base/javacontainer/test:javacontainer-test-legacy-parser"
             name: "javacontainer-test-legacy-parser-with-asan"
