--- a/.github/workflows/check_bazel_tests.yml
+++ b/.github/workflows/check_bazel_tests.yml
@@ -39,7 +39,7 @@ jobs:
             name: "javacontainer-test-legacy-parser-with-asan"
           - test: "--config=asan //base/javacontainer/test:javacontainer-test-ctpg-parser"
             name: "javacontainer-test-ctpg-parser-with-asan"
-          - test: "--config=asan --test_timeout=3600 //base/script_options_parser/ctpg/..."
+          - test: "--config=asan //base/script_options_parser/ctpg/..."
             name: "script_options_parser_ctpg_with_asan"
           - test: "--config=asan //base/script_options_parser/legacy/..."
             name: "script_options_parser_legacy_with_asan"
