--- a/.github/workflows/test_package_management_scripts.yaml
+++ b/.github/workflows/test_package_management_scripts.yaml
@@ -17,6 +17,8 @@ jobs:
       with:
         python-version: "3.10"
 
+    - uses: r-lib/actions/setup-r@v2
+
     - name: Init submodules
       run: git submodule update --init --recursive
 
